ghc-4335c07/testsuite/tests/typecheck/should_fail/T12124.hs
module T12124 where

data Whoops = Whoops Int Int

foo :: Maybe Int
foo = return (case Whoops 1 2 of
                 Whoops a -> a
                 _ -> 0)
